# dimigomeal-api

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  dockerfile
src/: db.rs  main.rs
